# supply-chain-firewall

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: code_quality.yaml  pypi-release.yml  test.yaml
docs/: loggers.md  subcommands.md  verifiers.md
docs/loggers/: dd_agent_logger.md  dd_api_logger.md  file_logger.md
docs/subcommands/: audit.md  configure.md  run.md
docs/verifiers/: age_verifier.md  dd_verifier.md  list_verifier.md  osv_verifier.md
examples/: block_list.yaml  findings_list.yaml  logger.py  verifier.py
scfw/: __init__.py  __main__.py  audit.py  cli.py  command.py  config.py  configure.py  constants.py  dd_logger.py  ecosystem.py  firewall.py  init.py  logger.py  main.py  package.py  package_manager.py  parser.py  report.py  resolver.py  target.py  uninstall.py  verifier.py  verify.py
scfw/cli/: __init__.py
scfw/commands/: __init__.py  npm_command.py  pip_command.py  poetry_command.py  utils.py
scfw/configure/: __init__.py  constants.py  dd_agent.py  env.py  interactive.py
scfw/loggers/: __init__.py  dd_agent_logger.py  dd_api_logger.py  dd_codesec_logger.py  dd_logger.py  file_logger.py
scfw/package_managers/: __init__.py  bun.py  go.py  npm.py  pip.py  poetry.py
scfw/resolvers/: __init__.py  npm_resolver.py  pip_resolver.py
scfw/verifiers/: __init__.py  block_list_verifier.py  dd_verifier.py  osv_verifier.py
tests/: test_cli.py  test_configure.py  test_firewall.py  test_report.py  utils.py
tests/commands/: test_npm.py  test_npm_command.py  test_pip.py  test_pip_command.py  utils.py  (+4 more)
(+46 files in other folders)
