[project]
name = "scfw"
dynamic = ["version"]
dependencies = [
    "cvss",
    "datadog-api-client",
    "inquirer",
    "packaging",
    "python-dotenv",
    "pyyaml",
    "requests",
    "tomli>=2.0; python_version<'3.11'",
]
requires-python = ">=3.10"
authors = [
    {name = "Ian Kretz", email = "ian.kretz@datadoghq.com"},
]
maintainers = [
    {name = "Ian Kretz", email = "ian.kretz@datadoghq.com"},
]
description = "A tool for preventing the installation of malicious npm and PyPI packages"
readme = "README.md"

[project.scripts]
scfw = "scfw.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "scfw",
    "scfw.cli",
    "scfw.configure",
    "scfw.loggers",
    "scfw.package_managers",
    "scfw.package_managers.npm",
    "scfw.verifiers",
    "scfw.verifiers.age_verifier",
    "scfw.verifiers.dd_verifier",
    "scfw.verifiers.list_verifier",
    "scfw.verifiers.osv_verifier",
]

[tool.setuptools.dynamic]
version = {attr = "scfw.__version__"}
